the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2018-08-05] RFC4880: small fixes in ArmorDecode() and PacketLengthDecode()
* [2018-07-14] RFC4880: added ECC algorithms 18 and 19 from RFC 6637
* [2018-06-24] release 1.3.13 of LibTMCG
* [2018-06-23] mpz_sprime: avoid waste of good random numbers
* [2018-06-22] RFC4880: added tmcg_openpgp_stringtokey_t
* [2018-06-21] RFC4880: added AlgorithmHashTextName(), DashEscapeFile()
* [2018-06-19] RFC4880: added some stuff for cleartext signature framework
* [2018-06-17] mpz_srandom: use additional Botan RNG, if configured --with-botan
* [2018-06-15] mpz_sprime: added non-incremental generator for (safe) primes
* [2018-06-13] VTMF: incomplete comparison in "check size of $c$" fixed 
* [2018-06-13] mpz_*: added prefix "tmcg_" to exported library functions
* [2018-06-13] mpz_sqrtm: migrate source to C++ for using Botan interfaces
* [2018-06-13] mpz_sprime: migrate source to C++ for using Botan interfaces
* [2018-06-13] mpz_spowm: migrate source to C++ for using Botan interfaces
* [2018-06-13] mpz_srandom: migrate source to C++ for using Botan interfaces
* [2018-06-01] fell the requirement of libgcrypt version to >= 1.6.0
* [2018-06-01] mpz_shash: emulate SHA3-256, if not available by libgcrypt
* [2018-05-24] mpz_helper: added iostream operator << for gcry_mpi_t
* [2018-05-23] RFC4880: added support for tElG in PrivateKeyBlockParse()
* [2018-05-23] RFC4880: added support for tDSS/DSA in PrivateKeyBlockParse()
* [2018-05-19] aiounicast: added PrintStatistics()
* [2018-05-06] added autoconf feature (--with-botan) for optional Botan support
* [2018-05-03] RFC4880: use secure memory for some of tmcg_openpgp_packet_ctx_t