@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2018-08-05] RFC4880: changed parsing strategy in MessageParse()
 * [2018-08-05] RFC4880: small fixes in ArmorDecode() and PacketLengthDecode()
 * [2018-07-14] RFC4880: added ECC algorithms 18 and 19 from RFC 6637
 * [2018-06-24] release 1.3.13 of LibTMCG
